--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {"vue/multi-word-component-names": "off"}
   },
   "browserslist": [
     "> 1%",
@@ -40,4 +40,5 @@
     "not dead",
     "not ie 11"
   ]
+  
 }
